--- a/src/common/components/driver/driver-list.css
+++ b/src/common/components/driver/driver-list.css
@@ -37,6 +37,10 @@
   font-weight: bold;
 }
 
+.ride_list_facilitator_prefix{
+  font-weight: bold;
+}
+
 .chevron::before {
   border-style: solid;
   border-width: 0.4em 0.4em 0 0;
